fix non-resized images

--- a/rdgenerator/templates/generator.html
+++ b/rdgenerator/templates/generator.html
@@ -76,12 +76,12 @@
             <div class="section">
                 <h2>Visual</h2>
                     <label for="{{ form.iconfile.id_for_label }}">Custom App Icon (in .png format)</label>
-                    <!-- {{ form.iconfile }}<br><br> -->
-                    <input type="file" name="iconfile" id="iconfile" accept="image/png">
+                    {{ form.iconfile }}<br><br>
+                    <!-- <input type="file" name="iconfile" id="iconfile" accept="image/png"> -->
                     <div id="icon-preview"></div><br><br>
                     <label for="{{ form.logofile.id_for_label }}">Custom App Logo (in .png format)</label>
-                    <!-- {{ form.logofile }}<br><br> -->
-                    <input type="file" name="logofile" id="logofile" accept="image/png">
+                    {{ form.logofile }}<br><br>
+                    <!-- <input type="file" name="logofile" id="logofile" accept="image/png"> -->
                     <div id="logo-preview"></div><br><br>
                     <label for="{{ form.theme.id_for_label }}">Theme:</label>
                     {{ form.theme }} {{ form.themeDorO }} *Default sets the theme but allows the client to change it, Override sets the theme permanently.<br><br>
