--- a/rdgenerator/templates/generator.html
+++ b/rdgenerator/templates/generator.html
@@ -163,12 +163,12 @@
                     <label for="{{ form.permanentPassword.id_for_label }}">Set Permanent Password:</label>
                     {{ form.permanentPassword }} *The password is used as default, but can be changed by the client<br><br>
                     
-                    {{ form.denyLan }}
-                    <label for="{{ form.denyLan.id_for_label }}">Deny LAN discovery</label><br><br>
-                    {{ form.enableDirectIP }}
-                    <label for="{{ form.enableDirectIP.id_for_label }}">Enable direct IP access</label><br><br>
-                    {{ form.autoClose }}
-                    <label for="{{ form.autoClose.id_for_label }}">Automatically close incoming sessions on user inactivity</label><br><br>     
+                    
+                    <label for="{{ form.denyLan.id_for_label }}">{{ form.denyLan }} Deny LAN discovery</label><br><br>
+                    
+                    <label for="{{ form.enableDirectIP.id_for_label }}">{{ form.enableDirectIP }} Enable direct IP access</label><br><br>
+                    
+                    <label for="{{ form.autoClose.id_for_label }}">{{ form.autoClose }} Automatically close incoming sessions on user inactivity</label><br><br>     
             </div>
         
             <div class="section">
@@ -193,21 +193,21 @@
                     <label for="{{ form.permissionsType.id_for_label }}">Permission type:</label>
                     {{ form.permissionsType }}<br><br>
                     <div class="checkbox-group">
-                    {{ form.enableKeyboard }} <label for="{{ form.enableKeyboard.id_for_label }}">Enable keyboard/mouse</label>
-                    {{ form.enableClipboard }} <label for="{{ form.enableClipboard.id_for_label }}">Enable clipboard</label><br>
-                    {{ form.enableFileTransfer }} <label for="{{ form.enableFileTransfer.id_for_label }}">Enable file transfer</label>
-                    {{ form.enableAudio }} <label for="{{ form.enableAudio.id_for_label }}">Enable audio</label><br>
-                    {{ form.enableTCP }} <label for="{{ form.enableTCP.id_for_label }}">Enable TCP tunneling</label>
-                    {{ form.enableRemoteRestart }} <label for="{{ form.enableRemoteRestart.id_for_label }}">Enable remote restart</label><br>
-                    {{ form.enableRecording }} <label for="{{ form.enableRecording.id_for_label }}">Enable recording session</label>
-                    {{ form.enableBlockingInput }} <label for="{{ form.enableBlockingInput.id_for_label }}">Enable blocking user input</label><br>
-                    {{ form.enableRemoteModi }} <label for="{{ form.enableRemoteModi.id_for_label }}">Enable remote configuration modification</label><br><br>
+                    <label for="{{ form.enableKeyboard.id_for_label }}">{{ form.enableKeyboard }} Enable keyboard/mouse</label>
+                    <label for="{{ form.enableClipboard.id_for_label }}">{{ form.enableClipboard }} Enable clipboard</label><br>
+                    <label for="{{ form.enableFileTransfer.id_for_label }}">{{ form.enableFileTransfer }} Enable file transfer</label>
+                    <label for="{{ form.enableAudio.id_for_label }}">{{ form.enableAudio }} Enable audio</label><br>
+                    <label for="{{ form.enableTCP.id_for_label }}">{{ form.enableTCP }} Enable TCP tunneling</label>
+                    <label for="{{ form.enableRemoteRestart.id_for_label }}">{{ form.enableRemoteRestart }} Enable remote restart</label><br>
+                    <label for="{{ form.enableRecording.id_for_label }}">{{ form.enableRecording }} Enable recording session</label>
+                    <label for="{{ form.enableBlockingInput.id_for_label }}">{{ form.enableBlockingInput }} Enable blocking user input</label><br>
+                    <label for="{{ form.enableRemoteModi.id_for_label }}">{{ form.enableRemoteModi }} Enable remote configuration modification</label><br><br>
                     </div>
             </div>
 
             <div class="section">
                 <h2><i class="fas fa-cog"></i> Other</h2>
-                    {{ form.removeWallpaper }} <label for="{{ form.removeWallpaper.id_for_label }}">Remove wallpaper during incoming sessions</label><br><br>
+                    <label for="{{ form.removeWallpaper.id_for_label }}">{{ form.removeWallpaper }} Remove wallpaper during incoming sessions</label><br><br>
                     <label for="{{ form.defaultManual.id_for_label }}">Default settings</label><br>
                     {{ form.defaultManual }}<br><br>
                     <label for="{{ form.overrideManual.id_for_label }}">Override settings</label><br>
