--- a/rdgenerator/templates/generator.html
+++ b/rdgenerator/templates/generator.html
@@ -123,7 +123,7 @@
                     <option value="linux">Linux (currently unavailable)</option>
                     <option value="android">Android (currently unavailable)</option>
                 </select>
-                <label for="{{ form.delayFix.id_for_label }}">{{ form.delayFix }} Fix connection delay when using third-party API</label><br><br>
+                <label for="{{ form.delayFix.id_for_label }}">{{ form.delayFix }} Fix connection delay when using third-party API</label>
             </div>
         </div>
         <div class="container">   
