--- a/rdgenerator/templates/generator.html
+++ b/rdgenerator/templates/generator.html
@@ -121,7 +121,7 @@
                 <select name="platform" id="id_platform">
                     <option value="windows" selected>Windows</option>
                     <option value="linux">Linux (currently unavailable)</option>
-                    <option value="android">Android (currently unavailable)</option>
+                    <option value="android">Android (testing, will likely have issues)</option>
                 </select>
                 <label for="{{ form.delayFix.id_for_label }}">{{ form.delayFix }} Fix connection delay when using third-party API</label>
             </div>
