--- a/rdgenerator/templates/waiting.html
+++ b/rdgenerator/templates/waiting.html
@@ -8,7 +8,7 @@
     Status: {{status}}
     <script>
         setTimeout(function() {
-            window.location.replace('/check_for_file?filename={{filename}}&uuid={{uuid}}');
+            window.location.replace('/check_for_file?filename={{filename}}&uuid={{uuid}}&platform={{platform}}');
         }, 5000); // 5000 milliseconds = 5 seconds
     </script>
 </body>
