--- a/rdgenerator/templates/generated.html
+++ b/rdgenerator/templates/generated.html
@@ -5,7 +5,8 @@
 <a href='/download?filename={{filename}}.rpm&uuid={{uuid}}'>{{filename}}.rpm</a><br>
 <a href='/download?filename={{filename}}-suse.rpm&uuid={{uuid}}'>{{filename}}-suse.rpm</a>
 {% elif platform == 'android' %}
-<a href='/download?filename={{filename}}.apk&uuid={{uuid}}'>{{filename}}.apk</a>
+<a href='/download?filename={{filename}}-aarch64.apk&uuid={{uuid}}'>{{filename}}.apk</a><br>
+<a href='/download?filename={{filename}}-x86_64.apk&uuid={{uuid}}'>{{filename}}.apk</a>
 {% else %}
 Error, no file generated
 {% endif %}
