allow building from master

--- a/rdgenerator/templates/generator.html
+++ b/rdgenerator/templates/generator.html
@@ -120,7 +120,7 @@
                 </div>
                 <select name="platform" id="id_platform">
                     <option value="windows" selected>Windows</option>
-                    <option value="linux">Linux (testing, will likely have issues)</option>
+                    <option value="linux">Linux</option>
                     <option value="android">Android (testing, will likely have issues)</option>
                 </select>
                 <label for="{{ form.version.id_for_label }}">Rustdesk Version:</label>
