--- a/rdgenerator/templates/generator.html
+++ b/rdgenerator/templates/generator.html
@@ -121,7 +121,7 @@
                 <select name="platform" id="id_platform">
                     <option value="windows" selected>Windows</option>
                     <option value="linux">Linux</option>
-                    <option value="android">Android (testing, will likely have issues)</option>
+                    <option value="android">Android</option>
                 </select>
                 <label for="{{ form.version.id_for_label }}">Rustdesk Version:</label>
                 {{ form.version }}
