allow not changing appname

--- a/rdgenerator/templates/generator.html
+++ b/rdgenerator/templates/generator.html
@@ -133,7 +133,7 @@
                 <h2><i class="fas fa-sliders-h"></i> General</h2>
                     <label for="{{ form.exename.id_for_label }}">Name of the configuration:</label>
                     {{ form.exename }}<br><br>
-                    <label for="{{ form.appname.id_for_label }}">Custom Application Name:</label>
+                    <label for="{{ form.appname.id_for_label }}">Custom Application Name (leave blank to use default):</label>
                     {{ form.appname }}<br><br>
                     <label for="{{ form.direction.id_for_label }}">Connection Type:</label>
                     {{ form.direction }}<br><br>
