feature: cycle monitors on toolbar

--- a/rdgenerator/templates/generator.html
+++ b/rdgenerator/templates/generator.html
@@ -214,6 +214,7 @@
                     {{ form.defaultManual }}<br><br>
                     <label for="{{ form.overrideManual.id_for_label }}">Override settings</label><br>
                     {{ form.overrideManual }}<br><br>
+                    <label for="{{ form.cycleMonitor.id_for_label }}">{{ form.cycleMonitor }} Add a button to cycle through available monitors to the minimized toolbar.</label>
             </div>
         </div>
         <div class="platform">
