--- a/rdgenerator/templates/generator.html
+++ b/rdgenerator/templates/generator.html
@@ -131,7 +131,7 @@
         <div class="container">   
             <div class="section">
                 <h2><i class="fas fa-sliders-h"></i> General</h2>
-                    <label for="{{ form.exename.id_for_label }}">Name of the configuration:</label>
+                    <label for="{{ form.exename.id_for_label }}">Name of the configuration (don't use spaces or special characters):</label>
                     {{ form.exename }}<br><br>
                     <label for="{{ form.appname.id_for_label }}">Custom Application Name (leave blank to use default):</label>
                     {{ form.appname }}<br><br>
