--- a/rdgenerator/templates/waiting.html
+++ b/rdgenerator/templates/waiting.html
@@ -207,7 +207,7 @@
 
         // Call on page load
         updatePlatformUI();
-        simulateProgress();
+        //simulateProgress();
 
         setTimeout(function() {
             window.location.replace('/check_for_file?filename={{filename}}&uuid={{uuid}}&platform={{platform}}');
